# iati-registry-libsuitecrm

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
libsuitecrm/: __init__.py  crm.py  exceptions.py  filter.py
tests/: test_fix_suitecrm_escaping.py  test_misc.py
tests/integration/: conftest.py  docker-compose.yaml  helpers.py  parameters.py  test_access_token.py  test_crud.py  test_general.py  test_get_records.py  test_relationships.py
